common-applications/control/cla-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: cla-test
  name: cla-test
