common-applications/control/cla-test/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cla-backend
  name: cla-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-backend
  template:
    metadata:
      labels:
        component: cla-backend
    spec:
      containers:
        - image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/cla-backend:0.0.1
          imagePullPolicy: IfNotPresent
          name: cla-backend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /opt/app/conf/pdfs/org_signature_pdf
              mkdir -p /opt/app/conf/pdfs/output
              /opt/app/cla-server
          volumeMounts:
            - mountPath: /opt/app/conf/pdfs
              name: data-volume
            - mountPath: /opt/app/conf/platforms/email.yaml
              subPath: email
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/gmail.json
              subPath: gmail
              name: secret-volume
            - mountPath: /opt/app/conf/platforms/code_platforms.yaml
              subPath: code-platforms
              name: secret-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: cla-data-vol
        - name: secret-volume
          secret:
            secretName: cla-secrets

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: cla-frontend
  name: cla-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cla-frontend
  template:
    metadata:
      labels:
        component: cla-frontend
    spec:
      containers:
        - image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/cla-webui:aebbf8682914e3ad42abd850eab675ecfa8b0159
          imagePullPolicy: IfNotPresent
          name: cla-frontend-pod
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
